# meeting-summarizer

./: .env.example  .gitignore  README.md  pyproject.toml
src/meeting_summarizer/: __init__.py  cli.py  config.py  diarizer.py  distributor.py  download_model.py  main.py  summary_engine.py  transcriber.py
src/meeting_summarizer/integrations/: __init__.py  meridian.py  slack.py
src/meeting_summarizer/llm/: __init__.py  anthropic_client.py  parsers.py
src/meeting_summarizer/models/: __init__.py  summary.py  transcript.py
src/meeting_summarizer/pipeline/: meeting_pipeline.py
src/meeting_summarizer/prompts/: __init__.py  meeting_summary.py  templates.py
src/meeting_summarizer/services/: diarizer.py  distributor.py  summarizer.py  transcriber.py
src/meeting_summarizer/utils/: files.py  text.py  time.py
tests/: test_transcriber.py
